--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -18,17 +18,23 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-      - name: configure aws credentials
+    
+      - name: Assume AWS Role
+        id: assume-role
         uses: aws-actions/configure-aws-credentials@v1
         with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # Set your desired AWS region
           role-to-assume: arn:aws:iam::600764632321:role/MyPipelineRole
-          
-          
+
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: |
+          terraform apply -auto-approve
         env:
-          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ steps.assume-role.outputs.access_key }}
+          AWS_SECRET_ACCESS_KEY: ${{ steps.assume-role.outputs.secret_access_key }}
+          AWS_SESSION_TOKEN: ${{ steps.assume-role.outputs.session_token }}
         working-directory: ./
 
       - name: Terraform Plan
