--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           
           role-to-assume: arn:aws:iam::600764632321:role/MyPipelineRole
+          aws-region: us-east-1  # Set your desired AWS region
 
       - name: Terraform Apply
         run: |
