--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -23,17 +23,18 @@ jobs:
         id: assume-role
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          
-          role-to-assume: arn:aws:iam::600764632321:role/MyPipelineRole
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1  # Set your desired AWS region
+          role-to-assume: arn:aws:iam::arn:aws:iam::600764632321:role/MyPipelineRole
 
       - name: Terraform Apply
         run: |
           terraform apply -auto-approve
         env:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # Set your desired AWS region
+          AWS_ACCESS_KEY_ID: ${{ steps.assume-role.outputs.access_key }}
+          AWS_SECRET_ACCESS_KEY: ${{ steps.assume-role.outputs.secret_access_key }}
+          AWS_SESSION_TOKEN: ${{ steps.assume-role.outputs.session_token }}
         working-directory: ./
 
       - name: Terraform Plan
