--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -23,8 +23,8 @@ jobs:
         id: assume-role
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: AKIAYXYC4ZUAXZ75LLTT
+          aws-secret-access-key: J36yvg3JQpawz2n2a+71anSwcS0ClOkm46iUJShK
           aws-region: us-east-1  # Set your desired AWS region
           role-to-assume: arn:aws:iam::600764632321:role/MyPipelineRole
 
@@ -32,9 +32,8 @@ jobs:
         run: |
           terraform apply -auto-approve
         env:
-          AWS_ACCESS_KEY_ID: ${{ steps.assume-role.outputs.access_key }}
-          AWS_SECRET_ACCESS_KEY: ${{ steps.assume-role.outputs.secret_access_key }}
-          AWS_SESSION_TOKEN: ${{ steps.assume-role.outputs.session_token }}
+          AWS_ACCESS_KEY_ID: AKIAYXYC4ZUAXZ75LLTT
+          AWS_SECRET_ACCESS_KEY: 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
         working-directory: ./
 
       - name: Terraform Plan
