--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -9,6 +9,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_ACCESS_KEY_ID: AKIAYXYC4ZUAXZ75LLTT
+      AWS_SECRET_ACCESS_KEY: J36yvg3JQpawz2n2a+71anSwcS0ClOkm46iUJShK
+      AWS_DEFAULT_REGION: us-east-1  # Set your desired AWS region
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -18,22 +23,10 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-    
-      - name: Assume AWS Role
-        id: assume-role
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: AKIAYXYC4ZUAXZ75LLTT
-          aws-secret-access-key: J36yvg3JQpawz2n2a+71anSwcS0ClOkm46iUJShK
-          aws-region: us-east-1  # Set your desired AWS region
-          role-to-assume: arn:aws:iam::600764632321:role/MyPipelineRole
 
       - name: Terraform Apply
         run: |
           terraform apply -auto-approve
-        env:
-          AWS_ACCESS_KEY_ID: AKIAYXYC4ZUAXZ75LLTT
-          AWS_SECRET_ACCESS_KEY: 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
         working-directory: ./
 
       - name: Terraform Plan
