--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -18,7 +18,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::600764632321:role/MyPipelineTrustPolicyRole
+          role-to-assume: arn:aws:iam::600764632321:role/MyPipelineRole
           role-session-name: samplerolesession
           aws-region: ${{ env.AWS_REGION }}
 
